# strawberry-alchemy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py
src/strawberry_alchemy/: __init__.py  enums.py  utils.py
src/strawberry_alchemy/filtering/: __init__.py  access_control.py  filter_builder.py  inputs.py  operators.py
src/strawberry_alchemy/mapping/: __init__.py  output_normalization.py  sqlalchemy_to_gql.py
src/strawberry_alchemy/models/: base.py
src/strawberry_alchemy/optimizer/: __init__.py  prefetch.py  query_analyzer.py  query_optimizer.py
src/strawberry_alchemy/permissions/: __init__.py  base.py  checker.py  input_parser.py  resolver.py  resource_bag.py  types.py
src/strawberry_alchemy/repository/: __init__.py  base.py  deletion.py
src/strawberry_alchemy/schema/: __init__.py  base.py
src/strawberry_alchemy/types/: __init__.py  base_node.py  connection.py  list_result.py
tests/: test_permissions.py  test_smoke.py
tests/filtering/: test_custom_filters.py
tests/mapping/: test_sqlalchemy_to_gql.py
tests/optimizer/: test_process_selected_fields.py
tests/repository/: test_base_repository.py
tests/types/: test_base_node_from_schema.py
