[project]
name = "strawberry-alchemy"
version = "0.1.0"
description = "Toolkit for fast and easy strawberry+sqlalchemy apis"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "David Roučka", email = "Alteian@proton.me" },
]
keywords = ["graphql", "strawberry", "sqlalchemy", "async", "api", "pagination", "relay", "filtering", "permissions", "crud", "database"]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "strawberry-graphql>=0.220",
    "sqlalchemy",
    "pydantic>=2.0",
    "python-dateutil>=2.7",
]

[project.urls]
Homepage = "https://github.com/Alteian/strawberry-alchemy"
Repository = "https://github.com/Alteian/strawberry-alchemy"
Issues = "https://github.com/Alteian/strawberry-alchemy/issues"
Changelog = "https://github.com/Alteian/strawberry-alchemy/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "mypy>=2.1",
    "aiosqlite>=0.22",
    "pre-commit>=4.6",
]

[build-system]
requires = ["uv_build>=0.11.21"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/strawberry_alchemy/repository/base.py" = ["A002"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["strawberry.ext.mypy_plugin"]
